Payment: Doku (#23)
* add .env variables for doku payment

* unit tests for superadmin

* unit tests for user

* add column supportExpiredAt

* in-progress: user purchase support

* popup for buy support+

* in-progress: purchase support

* fix request payment with doku

* popup options support duration

* in-progress: purchase support

* page for callback payment result

* page for purchase support

* add table payment

* in-progress: callback payment status

* save invoice user

* command to chmod _tmpdb while migrating schema in Makefile

* change tarantool version to 2.11.2

* revert go-tarantool to v1

* in-progress: UI for payment result

* fix use method DoInsert() instead of DoUpsert()

* payment result

* fix comment for /* SEQSCAN */
